fixed that stupid white space at the top of the pages

--- a/static/style.css
+++ b/static/style.css
@@ -455,6 +455,7 @@ button {
 .title {
     font-size: 35px;
     text-align: center;
+    padding-top: 1px;
 }
 
 .hemititle {
